--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+    "seed:listings": "tsx scripts/seed-listings.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -36,6 +37,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/date-fns": "2.5.3",
@@ -46,7 +48,7 @@
     "@types/socket.io-client": "^1.4.36",
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.1",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
