--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "seed:listings": "tsx scripts/seed-listings.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
