--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -41,6 +40,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@prisma/client": "^6.10.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/date-fns": "2.5.3",
@@ -50,7 +50,9 @@
     "@types/react-dom": "^19",
     "@types/socket.io": "^3.0.1",
     "@types/socket.io-client": "^1.4.36",
-    "prisma": "^6.9.0",
+    "i": "^0.3.7",
+    "npm": "^11.4.2",
+    "prisma": "^6.10.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.1",
     "tw-animate-css": "^1.3.4",
